<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_save"
        android:icon="@drawable/ic_save"
        android:title="@string/menu_save"
        android:contentDescription="Сохранить заметку"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_share"
        android:icon="@drawable/ic_share"
        android:title="@string/menu_share"
        android:contentDescription="Экспортировать заметку"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_delete"
        android:icon="@drawable/ic_delete"
        android:title="@string/menu_delete"
        android:contentDescription="Удалить заметку"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_export_txt"
        android:title="@string/menu_export_txt"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_export_pdf"
        android:title="@string/menu_export_pdf"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_export_excel"
        android:title="@string/menu_export_excel"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_export_word"
        android:title="@string/menu_export_word"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_about"
        android:title="@string/menu_about"
        app:showAsAction="never" />

</menu>